[gd_scene load_steps=10 format=1]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://3D.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://graphics/background.png" type="Texture" id=4]
[ext_resource path="res://graphics/crazycat.png" type="Texture" id=5]
[ext_resource path="res://music/rockstar.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]

font/size = 100
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="Animation" id=2]

resource/name = "creep"
length = 20.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 9.2, 11.8, 20 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 503.854, 1084.31 ), Vector2( 503.854, 494.307 ), Vector2( 503.854, 506.344 ), Vector2( 503.854, 1084.31 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 9.3, 9.7, 10.1, 10.7, 11.8, 20 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 7.29299, 6.38562 ), Vector2( 7.29299, 6.38562 ), Vector2( 7.29299, 9.21774 ), Vector2( 7.29299, 4.46405 ), Vector2( 7.29299, 6.15686 ), Vector2( 7.29299, 6.00276 ), Vector2( 7.29299, 1.73793 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 9.2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ] }

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 584, 118 )

[node name="World" type="Node2D"]

script/script = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 85, 520 )

[node name="TreatTime" type="Timer" parent="."]

process_mode = 1
wait_time = 1.5
one_shot = false
autostart = true

[node name="Score" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 15.0
margin/right = 273.0
margin/bottom = 105.0
custom_fonts/font = SubResource( 1 )
text = "TREATS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Cat" type="TextureFrame" parent="."]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Sprite" type="Sprite" parent="Cat"]

transform/pos = Vector2( 503.854, 833.501 )
transform/scale = Vector2( 7.29299, 5.48699 )
texture = ExtResource( 5 )
modulate = Color( 1, 1, 1, 0.309339 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cat/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/creep = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "creep"

[node name="Killzone" type="Area2D" parent="."]

transform/pos = Vector2( 511, 720 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="Music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="timeout" from="TreatTime" to="." method="_on_TreatTime_timeout"]

[connection signal="body_enter" from="Killzone" to="." method="_on_Killzone_body_enter"]


